ansi2/src/snapshots/ansi2__test__reset.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: ColorReset,
            range: (
                0,
                3,
            ),
        },
        Token {
            sgr: Unknown(
                27,
            ),
            range: (
                3,
                4,
            ),
        },
    ],
)
