ansi2/src/snapshots/ansi2__test__sgr4-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Color256(
                    45,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: 'a',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color256(
                    45,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: 'a',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Color256(
                    45,
                ),
                color: Default,
                bold: false,
                blink: false,
                char: 'a',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 4,
    h: 1,
}
