ansi2/src/snapshots/ansi2__test__sgr4.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: List(
                [
                    ColorReset,
                    ColorBackground(
                        Color256(
                            45,
                        ),
                    ),
                ],
            ),
            range: (
                0,
                12,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                12,
                13,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                13,
                14,
            ),
        },
        Token {
            sgr: Char(
                'a',
            ),
            range: (
                14,
                15,
            ),
        },
    ],
)
