ansi2/src/snapshots/ansi2__test__sgr6.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: ColorFgBg(
                Color256(
                    16,
                ),
                Color256(
                    186,
                ),
            ),
            range: (
                0,
                19,
            ),
        },
    ],
)
