ansi2/src/snapshots/ansi2__test__starship_prompt-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Color8(
                    0,
                ),
                color: Rgb(
                    218,
                    98,
                    125,
                ),
                bold: false,
                blink: false,
                char: '\u{e0b6}',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: 'w',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: 'i',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: 'n',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Rgb(
                    218,
                    98,
                    125,
                ),
                bold: false,
                blink: false,
                char: '\u{e0b0}',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: 'C',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: ':',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: '/',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: 'w',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: 't',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    218,
                    98,
                    125,
                ),
                color: Color8(
                    30,
                ),
                bold: false,
                blink: false,
                char: ' ',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    252,
                    161,
                    125,
                ),
                color: Rgb(
                    218,
                    98,
                    125,
                ),
                bold: false,
                blink: false,
                char: '\u{e0b0}',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    134,
                    187,
                    216,
                ),
                color: Rgb(
                    252,
                    161,
                    125,
                ),
                bold: false,
                blink: false,
                char: '\u{e0b0}',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    6,
                    150,
                    154,
                ),
                color: Rgb(
                    134,
                    187,
                    216,
                ),
                bold: false,
                blink: false,
                char: '\u{e0b0}',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Rgb(
                    51,
                    101,
                    138,
                ),
                color: Rgb(
                    6,
                    150,
                    154,
                ),
                bold: false,
                blink: false,
                char: '\u{e0b0}',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 16,
    h: 1,
}
