ansi2/src/snapshots/ansi2__test__starship_prompt-3.snap
---
source: ansi2/src/lib.rs
expression: canvas.minify()
---
[
    [
        Node {
            bg_color: Default,
            color: Rgb(
                218,
                98,
                125,
            ),
            bold: false,
            blink: false,
            text: "\u{e0b6}",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                0,
                0,
            ),
            color_r: (
                0,
                18,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                18,
                19,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                218,
                98,
                125,
            ),
            color: Color8(
                Black,
            ),
            bold: false,
            blink: false,
            text: "win",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                19,
                40,
            ),
            color_r: (
                19,
                40,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                40,
                43,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                218,
                98,
                125,
            ),
            color: Rgb(
                218,
                98,
                125,
            ),
            bold: false,
            blink: false,
            text: "\u{e0b0}",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                19,
                40,
            ),
            color_r: (
                43,
                61,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                61,
                62,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                218,
                98,
                125,
            ),
            color: Color8(
                Black,
            ),
            bold: false,
            blink: false,
            text: "C:/wt ",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                19,
                40,
            ),
            color_r: (
                62,
                67,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                67,
                73,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                252,
                161,
                125,
            ),
            color: Rgb(
                218,
                98,
                125,
            ),
            bold: false,
            blink: false,
            text: "\u{e0b0}",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                73,
                108,
            ),
            color_r: (
                73,
                108,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                108,
                109,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                134,
                187,
                216,
            ),
            color: Rgb(
                252,
                161,
                125,
            ),
            bold: false,
            blink: false,
            text: "\u{e0b0}",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                109,
                145,
            ),
            color_r: (
                109,
                145,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                145,
                146,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                6,
                150,
                154,
            ),
            color: Rgb(
                134,
                187,
                216,
            ),
            bold: false,
            blink: false,
            text: "\u{e0b0}",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                146,
                180,
            ),
            color_r: (
                146,
                180,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                180,
                181,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
        Node {
            bg_color: Rgb(
                51,
                101,
                138,
            ),
            color: Rgb(
                6,
                150,
                154,
            ),
            bold: false,
            blink: false,
            text: "\u{e0b0}",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
            bg_color_r: (
                181,
                214,
            ),
            color_r: (
                181,
                214,
            ),
            bold_r: (
                0,
                0,
            ),
            blink_r: (
                0,
                0,
            ),
            text_r: (
                214,
                215,
            ),
            dim_r: (
                0,
                0,
            ),
            italic_r: (
                0,
                0,
            ),
            underline_r: (
                0,
                0,
            ),
            hide_r: (
                0,
                0,
            ),
            strike_r: (
                0,
                0,
            ),
        },
    ],
]
