ansi2/src/snapshots/ansi2__test__starship_prompt.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        ColorForeground(
            Rgb(
                218,
                98,
                125,
            ),
        ),
        Char(
            '\u{e0b6}',
        ),
        ColorFgBg(
            Color8(
                30,
            ),
            Rgb(
                218,
                98,
                125,
            ),
        ),
        Char(
            'w',
        ),
        Char(
            'i',
        ),
        Char(
            'n',
        ),
        ColorForeground(
            Rgb(
                218,
                98,
                125,
            ),
        ),
        Char(
            '\u{e0b0}',
        ),
        ColorForeground(
            Color8(
                30,
            ),
        ),
        Char(
            'C',
        ),
        Char(
            ':',
        ),
        Char(
            '/',
        ),
        Char(
            'w',
        ),
        Char(
            't',
        ),
        Char(
            ' ',
        ),
        ColorFgBg(
            Rgb(
                218,
                98,
                125,
            ),
            Rgb(
                252,
                161,
                125,
            ),
        ),
        Char(
            '\u{e0b0}',
        ),
        ColorFgBg(
            Rgb(
                252,
                161,
                125,
            ),
            Rgb(
                134,
                187,
                216,
            ),
        ),
        Char(
            '\u{e0b0}',
        ),
        ColorFgBg(
            Rgb(
                134,
                187,
                216,
            ),
            Rgb(
                6,
                150,
                154,
            ),
        ),
        Char(
            '\u{e0b0}',
        ),
        ColorFgBg(
            Rgb(
                6,
                150,
                154,
            ),
            Rgb(
                51,
                101,
                138,
            ),
        ),
        Char(
            '\u{e0b0}',
        ),
        ColorReset,
        EraseInLine(
            0,
        ),
    ],
)
