ansi2/src/snapshots/ansi2__test__starship_title.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        CursorHide,
        Title(
            "/c/wt",
        ),
        ColorForeground(
            Color8(
                Black,
            ),
        ),
        Bold,
        ColorReset,
        EraseInDisplay(
            0,
        ),
        EraseInLine(
            0,
        ),
    ],
)
